--- a/index.html
+++ b/index.html
@@ -63,6 +63,17 @@
                     </p>
                 </div>
             </div>
+            <div class="about">
+                <div class="about-item">
+                    <img src="assets/images/about-1.jpg" alt="" class="about-img">
+                </div>
+                <div class="about-item">
+                    <img src="assets/images/about-2.jpg" alt="" class="about-img">
+                </div>
+                <div class="about-item">
+                    <img src="assets/images/about-3.jpg" alt="" class="about-img">
+                </div>
+            </div>
         </div>
     </section>
 </body>
